--- a/text/2-teorie.tex
+++ b/text/2-teorie.tex
@@ -1,8 +1,7 @@
 \chapter{Teoretický základ}
 \label{2-teorie}
-POPSAT FUKUŠIMU, NĚJAK TAK JAK TO MÁ HELEBRATNT NAPSANÝ U VSTUPNÍCH DAT
-POPSAT SAFECAST, DÁT WEBOVKU, CO DĚLAT A JAK TO SOUVISÍ
-Tato kapitola se zabývá..
+Tato kapitola se zabývá základy ionizujícího záření, jeho zdroji a biologickými účinky. Dále je popsána činnost mobilních skupin provádějících pozemní monitorování radiace. Poslední část kapitoly stručně pojednává o přínosu této bakalářské práce a tvoří přechod mezi teoretickou a praktickou částí.
+
 \section{Ionizující záření}
 	
 Záření (radiace) je proces, při kterém energie prochází prostorem. Typickými příklady záření, se kterými se setkáváme na denní bázi, je sluneční svit, rádiový, televizní nebo i wifi signál. % http://www.world-nuclear.org/information-library/safety-and-security/radiation-and-health/nuclear-radiation-and-health-effects.aspx
@@ -16,7 +15,7 @@ Ionizující záření se dělí na dva druhy:
 \begin{itemize}
 	\item \textbf{Přímo ionizující}
 	
-		Kvanta přímo ionizujícího záření nesou elektický náboj a přímo vyrážejí elektrony z atomů. Součástí této kategorie je např. záření $\alpha$ (prudce letící kladná jádra izotopu helia $_{2}He^{4}$ %https://www.cez.cz/edee/content/microsites/nuklearni/k22.htm
+		Kvanta přímo ionizujícího záření nesou elektrický náboj a přímo vyrážejí elektrony z atomů. Součástí této kategorie je např. záření $\alpha$ (prudce letící kladná jádra izotopu helia $_{2}He^{4}$ %https://www.cez.cz/edee/content/microsites/nuklearni/k22.htm
 		), $\beta^{-}$ (proud elektronů vznikající při přeměně neutronu na proton %https://www.cez.cz/edee/content/microsites/nuklearni/k22.htm)
 		), $\beta^{+}$ (proud kladných pozitronů, antičástic k elektronům) %https://www.cez.cz/edee/content/microsites/nuklearni/k22.htm)
 		 atd.
@@ -31,11 +30,11 @@ Ionizující záření se dělí na dva druhy:
 \begin{itemize}
 	\item \textbf{Dávka, dávkový příkon}
 	
-		V jaderné fyzice se jako základní jednotka používá becquerel [Bq] patřící mezi odvozené jednotky soustavy SI. Vyjadřuje střední počet radiokativních přeměn za sekundu. Tato jednotka ovšem neříká nic o druhu záření, jeho biologickému účinku, energii atd. Pro popis ionizujícího záření jsou zavedeny veličiny, které slouží jako charakteristiky jeho účinků na různé látky. Nejdůležitější z těchto veličin je tzv. dávka, která má za jednotku gray [Gy] a patří mezi základní jednotky SI. Fyzikální rozměr jednotky gray je joule na kilogram [J/kg]. Častá veličina je dále tzv. dávkový příkon, tedy přírust dávky v čase [Gy/s]. 
+		V jaderné fyzice se jako základní jednotka používá becquerel [Bq] patřící mezi odvozené jednotky soustavy SI. Vyjadřuje střední počet radioaktivních přeměn za sekundu. Tato jednotka ovšem neříká nic o druhu záření, jeho biologickém účinku, energii atd. Pro popis ionizujícího záření jsou zavedeny veličiny, které slouží jako charakteristiky jeho účinků na různé látky. Nejdůležitější z těchto veličin je tzv. dávka, která má za jednotku gray [Gy] patřící mezi základní jednotky SI. Fyzikální rozměr jednotky gray je joule na kilogram [J/kg]. Častá veličina je dále tzv. dávkový příkon, tedy přírůstek dávky v čase [Gy/s]. 
 		
 	\item \textbf{Ekvivalentní dávka, ekvivalentní dávkový příkon}
 
-	 	V předchozím bodě zmíněné veličiny nezohledňují všechny účinky působení záření na živou hmotu. Proto byly zavedeny radiobiologické veličiny, které toto zohledňují. Je to ekvivalentní dávka, která je vypočtena z dávky přenásobené tzv. jakostním činitelem Q závisejícím na typu a energii záření. Jeho hodnota je doporučovaná mezinárodní komisí radiologické ochrany\footnote{V dokumentu ICRP Publication 103 dostupném na http://www.sujb.cz/fileadmin/sujb/docs/radiacni-ochrana/ICRP103\_dokument.pdf}. Například u gama záření je Q = 1. Ekvivalentní dávka má za jednotku sievert [Sv], ekvivalentní dávkový příkon pak sievert za jednotku času [Sv/s].
+	 	V předchozím bodě zmíněné veličiny nezohledňují všechny účinky působení záření na živou hmotu. Proto byly zavedeny radiobiologické veličiny. Patří sem ekvivalentní dávka, která je vypočtena z dávky přenásobené tzv. jakostním činitelem Q závisejícím na typu a energii záření. Hodnota Q je doporučovaná mezinárodní komisí radiologické ochrany\footnote{V dokumentu ICRP Publication 103 dostupném na http://www.sujb.cz/fileadmin/sujb/docs/radiacni-ochrana/ICRP103\_dokument.pdf}. Například u gama záření je Q = 1. Ekvivalentní dávka má za jednotku sievert [Sv], ekvivalentní dávkový příkon pak sievert za jednotku času [Sv/s].
 	 	
 	\item \textbf{Shrnutí jednotek}
 	
@@ -73,7 +72,7 @@ Zdroje ionizujícího záření mohou být přírodní a umělé. Největší oz
 Podrobnější popis zdrojů ionizujícího záření by byl nad rámec této bakalářské práce, proto nebude dále rozebírán. 
 
 \subsection{Biologické účinky ionizujícího záření}
-Pro stanovení kritérií a principů radiační ochrany obyvatelstva a pracujících, kteří přicházejí se zdroji ionizujícího záření více do kontaktu, je potřeba vědět, jak ionizující záření působí na lidský organismus. Z těchto kritérií je dále je odvozen systém limitování dávek (viz. podkapitola ???). 
+Pro stanovení kritérií a principů radiační ochrany obyvatelstva a pracujících, kteří přicházejí se zdroji ionizujícího záření více do kontaktu, je potřeba vědět, jak ionizující záření působí na lidský organismus. Z těchto kritérií je dále odvozen systém limitování dávek (viz. kapitola \ref{sub:limity}). 
 %https://www.sujb.cz/radiacni-ochrana/oznameni-a-informace/strucny-prehled-biologickych-ucinku-zareni/
 
 Jak již bylo stručně popsáno, ionizující záření (radiace) způsobuje ionizaci atomů. Ta může dále vést k chemickým reakcím, fyzikálním změnám a v případě živých tkání k biochemickým změnám. Tyto změny mohou vést k poškození organismu nebo i k jeho úmrtí. Účinek radiace na organismus je rozdělen na 4 následující etapy: %http://astronuklfyzika.cz/RadiacniOchrana.htm#2
@@ -81,7 +80,7 @@ Jak již bylo stručně popsáno, ionizující záření (radiace) způsobuje io
 \begin{enumerate}
 	\item \textbf{Fyzikální stádium}
 	
-		Fyzikální stádium je primární proces, při kterém dochází k ionizaci atomů (toto vede k narušení chemických vazeb mezi atomy a molekulami). Při dávce 1Gy (jednotky dávky záření budou rozebrány v kapitole ??) se v objemu každé ozářené buňky o typické velikosti 10$\mu$m vytváří 10$^5$ ionizací. Tento proces trvá jen cca 10$^{-16}$ - 10$^{-14}$s.
+		Fyzikální stádium je primární proces, při kterém dochází k ionizaci atomů (což vede k narušení chemických vazeb mezi atomy a molekulami). Při dávce 1Gy se v objemu každé ozářené buňky o typické velikosti 10$\mu$m vytváří 10$^5$ ionizací. Tento proces trvá jen cca 10$^{-16}$ - 10$^{-14}$s.
 		
 	\item \textbf{Fyzikálně-chemické stádium}
 	
@@ -93,7 +92,7 @@ Jak již bylo stručně popsáno, ionizující záření (radiace) způsobuje io
 	
 	\item \textbf{Biologické stádium}
 	
-	Popsané molekulární změny mohou vyústit ve funkční a morfologické změny v buňkách, orgánech a poté i celkově v organismu. Trvání této fáze se pohybuje od jednotek sekund (buňky) až po několik let (organismus). Kdy se biologické stádium projeví záleží na množství dávky záření. Při nízkých dávkách se může projevit až za několik desítek let, kdežto naopak při vysokých dávkách již během desítek minut. 
+	Popsané molekulární změny mohou vyústit ve funkční a morfologické změny v buňkách, orgánech a poté i celkově v organismu. Trvání této fáze se pohybuje od jednotek sekund (buňky) až po několik let (organismus). Kdy se biologické stádium projeví, záleží na množství dávky záření. Při nízkých dávkách se může projevit až za několik desítek let, kdežto naopak při vysokých dávkách již během desítek minut. 
 \end{enumerate}
 
 Lidský organismus má omezenou schopnost opravy poškozených molekul buněk. Pokud však dávka překročí určitou mez, buňky uhynou a vzniká tzv. nemoc z ozáření. 	% všechno až sem: http://astronuklfyzika.cz/RadiacniOchrana.htm#2
@@ -102,37 +101,68 @@ Nemoc z ozáření může být rozdělena na 2 kategorie: %http://www.priznaky-p
 \begin{itemize}
 	\item \textbf{Akutní nemoc z ozáření}
 	
-		Akutní nemoc z ozáření je způsobena jednorázovým ozářením. Prvotními příznaky je nevolnost, zvracení a průjmy. Pokud dávka ozáření překročí hodnotu přibližně 4 Sv (viz. kapitola ????), nastupuje tzv. střevní forma, kterou doprovází krvavé průjmy a minerální rozvrat. Poté přichází období latence (prodlevy), jehož délka trvání závisí na množství absorbované dávky. Po uplynutí latentní fáze nastupuje tzv. dřeňová forma, kdy dojde k zhroucení krvetvorby a imunitních mechanismů. Nemoc v této fázi dále způsobuje sepsi, sterilitu, u těhotných žen potrat atp. Pokud dojde k absorbaci dávek záření vyšších než 10 Sv, dochází k nevratnému poškození buněk centrálního nervového systému a později nastává smrt.
+		Akutní nemoc z ozáření je způsobena jednorázovým ozářením. Prvotními příznaky je nevolnost, zvracení a průjmy. Pokud dávka ozáření překročí hodnotu přibližně 4 Sv, nastupuje tzv. střevní forma, kterou doprovází krvavé průjmy a minerální rozvrat. Poté přichází období latence (prodlevy), jehož délka trvání závisí na množství absorbované dávky. Po uplynutí latentní fáze nastupuje tzv. dřeňová forma, kdy dojde k zhroucení krvetvorby a imunitních mechanismů. Nemoc v této fázi dále způsobuje sepsi, sterilitu, u těhotných žen potrat atp. Pokud dojde k absorbaci dávek záření vyšších než 10 Sv, dochází k nevratnému poškození buněk centrálního nervového systému a později nastává smrt.
 		
 	\item \textbf{Chronická nemoc z ozáření}
 	
-		Tato forma nemoci z ozáření se rozvíjí při dlouhodobém působení malých dávek ionizujícího záření. Dále se dělí na 3 fáze. První z nich je fáze nespecifických obtíží způsobující nespavost, bolesti hlavy, pokles bílých krvinek, zažívací obtíže atd. Další z fází je fáze výrazné symptomatologie, kde se stupňují bolesti hlavy, dochází k poruchám motoriky, k chronickým průjmům, váhovým úbytkům atd. Dochází k poškození centrálního nervového systému, což doprovází zhoršený sluch a zrak. Následuje poslední fáze nezvratného poškození. Přestávají fungovat rozmnožovací orgány, dochází k poškození srdce, ledvin, jater, dále se na kůži a sliznici tvoří vředy atd. 
+		Tato forma nemoci z ozáření se rozvíjí při dlouhodobém působení malých dávek ionizujícího záření. Dále se dělí na 3 fáze. První z nich je fáze nespecifických obtíží způsobující nespavost, bolesti hlavy, pokles počtu bílých krvinek, zažívací obtíže atd. Další z fází je fáze výrazné symptomatologie, kde se stupňují bolesti hlavy, dochází k poruchám motoriky, k chronickým průjmům, váhovým úbytkům atd. Dochází k poškození centrálního nervového systému, což doprovází zhoršený sluch a zrak. Následuje poslední fáze nezvratného poškození. Přestávají fungovat rozmnožovací orgány, dochází k poškození srdce, ledvin, jater, dále se na kůži a sliznici tvoří vředy atd. 
 		%http://www.priznaky-projevy.cz/traumatologie/nemoc-z-ozareni-radiacni-syndrom-priznaky-projevy-symptomy
 \end{itemize}
 
 \section{Radiační ochrana} %https://www.suro.cz/cz/radiacni-ochrana
 Cílem radiační ochrany je zajistit ochranu obyvatelstva před účinky ionizujícího záření a zároveň umožnit z těchto účinků vytěžit co největší přínos (v radiologii, v jaderné energetice atp.). Důležitou součástí radiační ochrany je monitorování radiační situace. Nasbíraná data slouží pro posuzování stavu ozáření, pro další potřeby sledování a pro rozhodování o opatřeních v případě radiačních havárií. %https://www.sujb.cz/monitorovani-radiacni-situace/
 
-\subsection{Limity expozice ionizujícímu záření v České Republice}
-Stupeň povoleného ozáření obyvatelstva se řídí omezeními, které jsou určovány legislativou ve vyhláškách úřadů zabývajících se touto problematikou (\zk{SÚRO}, \zk{SÚJB}). Konkrétně pro Českou republiku je to vyhláška  307/2002 Sb. Použitými jednotkami jsou jednotky ekvivalentní dávky mikrosieverty [$\mu$Sv]. Mikrosieverty se v udávání dávek běžně používají z důvodů, že hodnota 1 sievert je tak vysoká, že se s ní člověk běžně nesetká.  
+\subsection{Limity expozice ionizujícímu záření v České republice}
+\label{sub:limity}
+Stupeň povoleného ozáření obyvatelstva se řídí omezeními, která jsou určována legislativou ve vyhláškách úřadů zabývajících se touto problematikou (\zk{SÚRO}, \zk{SÚJB}). Konkrétně pro Českou republiku je to vyhláška  307/2002 Sb. Celosvětově se ekvivalentní dávka resp. ekvivalentní dávkový příkon uvádí v jednotkách microsievert [$\mu$Sv] resp. microsievert za hodinu [$\mu$Sv/h]. Limity expozice ionizujícímu záření v ČR jsou patrné z obrázku \ref{fig:davkyCR}.
+%https://www.suro.cz/cz/faq/jake-hodnoty-davkoveho-prikonu-muzeme-v-cr-ocekavat %https://www.suro.cz/cz/radiacni-ochrana/principy-radiacni-ochrany
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.6]{./pictures/davkyCR.jpeg}
+      	\caption[Příklady expozice a limity]{Příklady expozice a limity}(zdroj:SÚJB, https://www.suro.cz/cz/faq/jake-hodnoty-davkoveho-prikonu-muzeme-v-cr-ocekavat)
+    	\label{fig:davkyCR}
+\end{figure} 
 
+\subsection{Pozemní monitorování radiační situace}
+Pomocí tzv. Radiační monitorovací sítě (\zk{RMS}) je zjišťována radiační situace na území České republiky. Na činnosti \zk{RMS} se podílejí resorty různých ministerstev (financí, obrany, vnitra atd.), dále držitelé povolení k provozu jaderných zařízení a hlavně Státní ústav radiační ochrany (\zk{SÚRO}). Řízením je pověřen Státní ústav pro jadernou bezpečnost (\zk{SÚJB}). %https://www.suro.cz/cz/rms
 
+Součástí \zk{RMS} jsou i mobilní skupiny (\zk{MS}), jejichž úkolem je dodat krizovému štábu při radiačních haváriích (radiační nehoda vyžadující opatření na ochranu obyvatelstva a životního prostředí) dostatek dat pro posouzení radiační situace a návrh nutných opatření. \zk{MS} při jízdě autem kontinuálně monitorují ekvivalentní dávky resp. ekvivalentní dávkové příkony (pro zjednodušení dále v textu jako dávky resp. dávkové příkony), odebírají vzorky složek životního prostředí atd. 
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.6]{./pictures/vuzSURO.jpg}
+      	\caption[Vůz \zk{MS} \zk{SÚRO} Praha]{Vůz \zk{MS} \zk{SÚRO} Praha}(zdroj:Helebrant)
+    	\label{fig:vuzSURO}
+\end{figure} 
 
+Před vlastním únikem škodlivých látek do ovzduší při radiačních haváriích jsou k dispozici modelové prognózy vznikající radiační události získané na základě napočítaných havarijních sekvencí, reálných údajů a meteorologické situace. Vedle těchto modelů jsou již v době úniku měřeny hodnoty dávkových příkonů ze sítě dozimetrů (zařízení k měření dávek ionizujícího záření), které jsou rozmístěné po areálu jaderné elektrárny. Všechny tyto informace napomáhají krizovému štábu identifikovat směr úniku a vytipovat oblasti monitoringu pro \zk{MS}. 
 
+\subsubsection{Fáze radiační havárie}
+
+Radiační havárie v jaderné elektrárně (a její řešení) je rozdělena na 3 hlavní fáze:
+
+\begin{itemize}
+	\item \textbf{Časná fáze}
+	
+		Časná fáze zahrnuje dobu přibližně 1-2 dnů po ukončení úniku látek z havarované jaderné elektrárny. Během této fáze je nutné co nejdříve zmapovat dávkové příkony na daném území. Pro lepší komunikaci mezi krizovým štábem a \zk{MS} jsou předpřipravené trasy, které jsou dále upravovány podle naměřených hodnot. Blízké okolí jaderných elektráren (20km JE Dukovany, 13km JE Temelín) je rozděleno na 16 sektorů. V každém sektoru je právě pro prvotní fázi monitorování připravena 1 trasa monitorování zasahující i do sektorů vedlejších. Vytipována je ještě 17. pojezdová trasa, která je vedena po blízkém okolí jaderné elektrárny. Cílem časné fáze je pomocí měřených hodnot v daném místě a čase upřesnit modelovou prognózu a získat tak podklady pro rozhodování o evakuaci obyvatelstva. 
+
+	\item \textbf{Střední a pozdní fáze}
+		
+		Střední a pozdní fáze může mít v závislosti na závažnosti havárie trvání několik týdnů až roků. Tato fáze má za cíl získat podklady k rozhodnutí o dalších ochranných opatřeních, ukončení evakuace, regulaci potravních řetězců, přesídlení obyvatelstva z kontaminované oblasti atp. Úkolem \zk{MS} je vedle detailnějšího pojezdového monitorování sběr vzorků životního prostředí a jejich předání do specializovaných laboratoří pro analýzy. Dále je to na základě měření leteckých skupin, které vyhledávají tzv. horká místa (místa s významně vyšším dávkovým příkonem), upřesňování výsledků těchto měření. 
+\end{itemize}
+
+\subsubsection{Havarijní připravenost}
+
+Obzvlášť pro časnou fázi radiační havárie je třeba, aby byly připravené a nacvičené postupy a metodiky, podle kterých se \zk{MS} mají řídit. Kvůli připravenosti probíhají havarijní cvičení pořádaná \zk{SÚJB}, kde jsou procvičeny všechny postupy. Tyto nácviky probíhají měsíčně, kdy každá \zk{MS} projede trasu dlouhou cca. 40km, naměří dávkové příkony a vloží je do databáze. Jednou za čas také probíhají cvičení ve větším měřítku (cvičení ZÓNA), kdy jsou simulovány radiační havárie. Zapojovány jsou všechny složky, které by byly zapojeny během skutečné havárie. Poslední takové cvičení proběhlo v roce 2015, kdy byla simulována havárie v jaderné elektrárně Temelín.
+
+\subsubsection{Bezpečnost práce}
+
+Členové \zk{MS} se účastní měření v souladu se zásadami bezpečnosti a ochrany zdraví, které stanovují příslušné zákony a vyhlášky (např. zákon č.309/2006 Sb. - zákon o zajištění dalších podmínek bezpečnosti a ochrany zdraví při práci). Pracovníci používají při výjezdech osobní ochranné pomůcky (ochranný oděv, pracovní obuv, respirátor atd.) a dále jsou vybaveni osobními dozimetry. 
 %%asim.utia.cas.cz/reporty/2011/HZS_FINAL_po%20zkraceni.pdf
+%https://www.suro.cz/cz/vyzkum/vysledky/metodiky/Metodika%20detekce%20radioaktivnich%20latek%20na%20zasazenem%20uzemi.pdf/view
 
-%%sujb.cz/fileadmin/sujb/docs/zpravy/vyrocni_zpravy/ceske/VZ_SUJB_2015_FIN_cast_II.pdf
+\section{Přínos bakalářské práce}
+Během pozemního monitorování dochází k absorbaci škodlivých látek pracovníky \zk{MS}. Legislativou jsou stanoveny hodnoty, které množství absorbované dávky nesmí překročit. V závislosti na bezpečnosti práce je tedy třeba plánovat trasy monitorování tak, aby pracovníci \zk{MS} nebyli vystaveni zdraví ohrožujícím dávkám. 
 
-%%sujb.cz/aktualne/detail/clanek/zona-2015-cviceni-simulovane-havarie-v-temeline-1
-
-Zeptat se, čím SÚRO monitoruje pozemní radiaci (jakým vehiklem, nějak ho popsat)
-
-https://www.suro.cz/cz/vyzkum/vysledky/metodiky/Metodika%20detekce%20radioaktivnich%20latek%20na%20zasazenem%20uzemi.pdf/view
-
-https://www.suro.cz/cz/vyzkum/vysledky/mobilni-a-stacionarni-radiacni-monitorovaci-systemy-nove-generace-pro-radiacni-monitorovaci-site-mostar
-
-Mobilní a stacionární radiační monitorovací systémy nové generace pro radiační monitorovací sítě (MOSTAR)
-
-Metody radiační ochrany, upřesnit k čemu se to bude používat, nerad bych tam psal nesmysly.
+Vytvářený softwarový nástroj, který je předmětem této bakalářské práce, má sloužit jako pomůcka k plánování bezpečných tras monitorování. Dle výsledků výpočtu nástroje, tedy mimo jiné nakumulovaných dávek v jednotlivých bodech trasy, může krizový štáb upravit trasu, případně modifikovat doporučenou rychlost vozidla tak, aby se dlouho nezdržovalo v simulaci vytipovaných horkých místech. Jelikož hodnoty vstupující do výpočtu jsou interpolované a nejsou tedy exaktní, nástroj také neposkytuje exaktní výsledky a není možné ho použít pro důležitá rozhodování, např. o evakuaci obyvatelstva atp. Dalším využitím nástroje může být například plánování tras evakuace obyvatel z vybraných oblastí při havarijním plánování nebo cvičení. Nástroj byl vytvořen na objednávku Státního ústavu radiační ochrany, v. v. i.
