--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -12,6 +12,14 @@
 	\novazkratka{SÚJB}
 	      {SÚJB}
 	      {Státní úřad pro jadernou bezpečnost}
+	      
+	\novazkratka{RMS}
+		  {RMS}
+		  {Radiační monitorovací síť}
+		  
+	\novazkratka{MS}
+		  {MS}
+		  {Mobilní skupiny}
 
 	\novazkratka{CSV}
 		  {CSV}
