--- a/text/3-technologie.tex
+++ b/text/3-technologie.tex
@@ -1,32 +1,15 @@
 \chapter{Použité technologie}
 \label{3-technologie}
 
-Tato kapitola rozebírá technologie použité pro tvorbu nástroje.
-\section{QGIS}
-
-\begin{figure}[H]
-    \centering
-      \includegraphics[width=100pt]{./pictures/qgis.png}
-      \caption[QGIS logo]{QGIS logo}(zdroj: %https://commons.wikimedia.org/wiki/File:QGis_Logo.png)
-      \label{fig:qgis}
-  \end{figure}
- 
-% http://docs.qgis.org/2.14/en/docs/user_manual/preamble/foreword.html
-QGIS je multiplatformní geografický informační systém (\zk{GIS}) vyvíjený jako Open Source šířený pod Obecnou veřejnou licencí GNU (\zk{GNU GPL}). \zk{GNU GPL} zaručuje svobodu jeho sdílení a úprav, které vedou k implementaci nových funkcionalit a k jeho zdokonalení. To z něj činí mocný nástroj používaný ve veřejném i soukromém sektoru. QGIS je psán v programovacím jazyku C++, jeho grafické uživatelské rozhraní je postaveno na knihovně Qt. Projekt QGIS započal v roce 2002, verze 1.0 byla uveřejněna roku 2009. 
-
-QGIS disponuje nepřeberným množstvím zásuvných modulů (pluginů) rozšiřujících funkčnost softwaru. Pluginy jsou programovány v jazyku C++ nebo Python. 
-
-Open source nutně neznmná nepodporovný, právě naopak, velikost on-line komunity zabývající se QGIS a její rychla odezva...
-
-
+V této kapitole budou popsány technologie použité pro tvorbu softwarového nástroje, jež je předmětem této bakalářské práce. Implementace byla provedena v programovacím jazyku Python s využitím grafického frameworku PyQt a QGIS API (rozhraní pro programování aplikací).  
 
 \section{Python}
 \begin{figure}[H]
     \centering
       \includegraphics[width=100pt]{./pictures/python.png}
-      \caption[Python logo]{Python logo}(zdroj: %???)
+      \caption[Python logo]{Python logo (zdroj: Wikimedia Commons)}
       \label{fig:python}
-  \end{figure}
+\end{figure}
   
 Python je objektově orientovaným skriptovacím jazykem zkompilovatelným téměr na každé platformě. Oceňován programátory (především začátečníky) je pro svou jednoduchou a velice schopnou syntax, například také díky dynamickému typování (nepožaduje specifikaci datového typu u proměnných). Dále jeho objektový model podporuje polymorfismus, přetěžování operátorů a vícenásobnou dědičnost. Hlavním důvodem, proč je zařazován mezi skriptovací jazyky je jeho integrace s jazykem C. Díky knihovnám Python/C API lze z programů v Pythonu volat kód psaný v C nebo naopak, pro aplikace psané v C je možné integrovat interpret Pythonu. %naučte se Python knížka
 Python bývá označován jako "spustitelný pseudokód" - syntaxe se snaží vyhnout složitým zápisům a znakům ($\$, <<, \&\&, ?$), inspiruje se v matematice zápisem abstraktních algoritmů.%http://naucse.python.cz/lessons/intro/magic/
@@ -47,6 +30,33 @@ Jazyk Python byl navržen koncem 80. let nizozemským počítačovým programát
 
 Pro výpis anglického originálu Zenu stačí do konzole Pythonu napsat \\ \texttt{$>>>$~\textbf{import}~this}. Od roku 2008 je vyvíjena řada Pythonu 3, která se snaží naplnit právě poslední ze zmiňovaných aforismů, kdy důraz je kladen na odstranění duplicitních programových konstrukcí a modulů. Python 3 není plně zpětně kompatibilní s řadou 2, softwary napsané a využívající Python 2 postupně přecházejí na jeho novou verzi (i QGIS s připravovanou verzí QGIS 3.0). Pro zajímavost, jazyk byl pojmenován podle britské komediální skupiny Monty Python.  %http://www.python-course.eu/python3_history_and_philosophy.php
 
-
 \section{Qt}
 
+\begin{figure}[H]
+    \centering
+      \includegraphics[width=40pt]{./pictures/qt.png}
+      \caption[Qt logo]{Qt logo (zdroj: Wikimedia Commons)}
+      \label{fig:python}
+\end{figure}
+
+Qt je aplikační vývojový framework umožňující multiplatformní produkci aplikací s grafickým uživatelským rozhraním (\zk{GUI}). Qt dále nabízí mnoho multiplatformních vývojových nástrojů pro usnadnění vývoje aplikací pomocí této technologie. Vedle vývojového prostředí Qt Creator (umožňuje kompletní vývoj aplikací) a dalších, je to samostatný nástroj pro tvorbu \zk{GUI} Qt Designer, který byl využíván při tvorbě vytvářeného softwarového nástroje. %grafick8 u6ivatelsk8 rozrhani blabla, tak nizka co mam
+
+\section{PyQt}
+PyQt je propojení Pythonu jako programovacího jazyka a Qt jako frameworku poskytujícího nástroj pro tvorbu \zk{GUI}. Kombinace Pythonu a Qt umožňuje vyvíjet aplikace, které jsou kompatibilní s většinou používaných platforem a otevírá dveře začátečníkům díky jednoduchosti, přehlednosti a síle Pythonu. PyQt je používán pro vývoj všech druhů grafických aplikací, od programů pro vedení účetnictví přes vědci užívané softwarové nástroje pro tvorbu vizualizací až po počítačové hry.
+
+\section{QGIS}
+
+\begin{figure}[H]
+    \centering
+      \includegraphics[width=40pt]{./pictures/qgis.png}
+      \caption[QGIS logo]{QGIS logo (zdroj: Wikimedia Commons)}
+      \label{fig:qgis}
+\end{figure}
+ 
+% http://docs.qgis.org/2.14/en/docs/user_manual/preamble/foreword.html
+QGIS je multiplatformní geografický informační systém (\zk{GIS}) vyvíjený jako Open Source šířený pod Obecnou veřejnou licencí GNU (\zk{GNU GPL} - GNU General Public License). \zk{GNU GPL} zaručuje svobodu jeho sdílení a úprav, které vedou k implementaci nových funkcionalit a k jeho zdokonalení. To z něj činí mocný nástroj používaný ve veřejném i soukromém sektoru. QGIS je psán v programovacím jazyku C++, jeho grafické uživatelské rozhraní je postaveno na knihovně Qt. Projekt QGIS započal v roce 2002, verze 1.0 byla uveřejněna roku 2009. QGIS disponuje nepřeberným množstvím zásuvných modulů (pluginů) rozšiřujících funkčnost softwaru. Pluginy jsou programovány v jazyku C++ nebo Python. 
+
+
+
+
+   
