--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -1,10 +1,6 @@
 
 \begin{seznamzkratek}{ABCDE}
-
-	\novazkratka{GNU GPL}
-	      {GNU GPL}
-	      {????}
-
+	
 	\novazkratka{SÚRO}
 	      {SÚRO}
 	      {Státní ústav radiační ochrany, v. v. i.}
@@ -13,6 +9,10 @@
 	      {SÚJB}
 	      {Státní úřad pro jadernou bezpečnost}
 	      
+	\novazkratka{JE}
+		  {JE}
+		  {Jaderná elektrárna}
+	      
 	\novazkratka{RMS}
 		  {RMS}
 		  {Radiační monitorovací síť}
@@ -20,6 +20,18 @@
 	\novazkratka{MS}
 		  {MS}
 		  {Mobilní skupiny}
+
+	\novazkratka{GIS}
+		  {GIS}
+		  {Grafický informační systém}	
+	
+	\novazkratka{GNU GPL}
+	      {GNU GPL}
+	      {Obecná veřejná licence GNU}
+	     
+	\novazkratka{GUI}
+		  {GUI}
+		  {Grafické uživatelské rozhraní}
 
 	\novazkratka{CSV}
 		  {CSV}
@@ -32,12 +44,5 @@
 	\novazkratka{GPX}
 		  {GPX}
 		  {GPS Exchange Format}
-	
-	\novazkratka{JE}
-		  {JE}
-		  {Jaderná elektrárna}
 		  
-	\novazkratka{GIS}
-		  {GIS}
-		  {Grafický informační systém}
 \end{seznamzkratek}
