Add abstract, modify text.

--- a/text/4-plugin.tex
+++ b/text/4-plugin.tex
@@ -279,7 +279,7 @@ Z balíku dat byla vybrána zájmová oblast kolem jaderné elektrárny Fukushim
 \end{figure} 
 
 \subsection{Trasa monitorování}
-Trasy monitorování použité pro testování byly naplánovány pomocí běžně používaných webových služeb Mapy.cz\footnote{https://mapy.cz/} a Google (jak již bylo zmíněno v kapitole \ref{subsec:vstupniData}). Trasy byly vyexportovány ve formátech \zk{KML} a \zk{GPX}. Byly voleny tak, aby se jejich průběh co nejvíce přiblížil \zk{JE} Fukushima a aby byla vidět výrazná změna hodnot dávkových příkonů.
+Trasy monitorování použité pro testování byly naplánovány pomocí běžně používaných webových služeb Mapy.cz a Google (jak již bylo zmíněno v kapitole \ref{subsec:vstupniData}). Trasy byly vyexportovány ve formátech \zk{KML} a \zk{GPX}. Byly voleny tak, aby se jejich průběh co nejvíce přiblížil \zk{JE} Fukushima a aby byla vidět výrazná změna hodnot dávkových příkonů.
 
 \begin{figure}[H]
     \centering
