--- a/text/michael-kala-bp-2017.tex
+++ b/text/michael-kala-bp-2017.tex
@@ -122,13 +122,13 @@
 %% Abstrakt
 %%% ML: rozsirit, kopie zadani je pro abstrakt malo
 \abstrakt 
-{Abstrakt cesky}
-{Abstract english}
+{Cílem této bakalářské práce je implementace softwarového nástroje umožňujícího plánování optimálních tras pozemního monitorování radiace. Při únicích radioaktivních látek do ovzduší je specializovanými softwary spočtena prognóza šíření radioaktivního mraku. Jedním z produktů této prognózy je také mapa dávkových příkonů záření gama pro zasaženou oblast. Na základě této mapy vytvářený softwarový nástroj určí přibližný odhad dávky záření, kterou obdrží mobilní skupina provádějící měření na dané trase v~postiženém území. V případě překročení hraničních hodnot nástroj pomůže v~přeplánování trasy přes jiné komunikace příp. změny doporučené rychlosti jízdy vozidla tak, aby mobilní skupina nebyla vystavována nebezpečným dávkám.}
+{The aim of this bachelor thesis is the implementation of a software tool enabling the management of routes of the ground radiation monitoring. During nuclear disasters, the radioactive substances pollute the environment. Specialized softwares are capable of making a prediction of the spread of the radiation cloud. One of the products of the prediction is also a map of dose rates of the gamma radiation. Based on this map, the created software tool calculates an estimate of the gamma radiation dose which a mobile group doing the field work would obtain on a given route. In case the dose limit value is exceeded, the tool helps to plan changes of the route waypoints using other roads or to modify the recommended speed of the vehicle so the field mobile group would not obtain those values of the dose, that are dangerous or even lethal.}
 
 %% Klíčová slova
 \klicovaslova
-{GIS, QGIS, zásuvný~modul, python}
-{GIS, QGIS, plugin, python}
+{GIS, QGIS, zásuvný~modul, python, SÚRO, ionizující záření, radiační ochrana}
+{GIS, QGIS, plugin, python, NRPI, ionizing radiation, radiological protection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
